--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <li>Read Work Docs</li>
     <li>Workout</li>
   </ul>
+
+
+    <footer>
+        <br><a href="https://github.com/r3y3w/project-todo-list.git">Check out the To Do List  Code here.</a>
+    </footer>
+  
   <script src='./script.js'></script>c
 </body>
 </html>
