index.html code correction

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         <br><a href="https://github.com/r3y3w/project-todo-list.git">Check out the To Do List  Code here.</a>
     </footer>
   
-  <script src='./script.js'></script>c
+  <script src='./script.js'></script>
 </body>
 </html>
