add comments to index.html and script.js

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Todo</title>
+  <title>Rafael's To do list app</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
 </head>
 <body>
   <div id="" class="header">
     <h2>Rafael's to do app</h2>
+    <!-- The Line Below will create the input box -->
     <input type="text" id="myInput" placeholder="Task...." />
+     <!-- The Line Below will will call the addTask() function on click.  addBtn class will be call on the styles.css  -->
     <span onclick="addTask()" class="addBtn">Add Task</span>
   </div>
+  <!-- The Line Below: id="myUL" will be use and called by the script.js -->
   <ul id="myUL">
     <li>Take Out The Trash</li>
     <li>Do Laundry</li>
@@ -24,6 +27,7 @@
 
 
     <footer>
+      <!-- The Line Below: Use to reference git hub Repo -->
         <br><a href="https://github.com/r3y3w/project-todo-list.git">Check out the To Do List  Code here.</a>
     </footer>
   
